<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".PackageActivities.About">

    <include
        android:id="@+id/toolbar"
        layout="@layout/tool_toolbar" />

    <ImageView
        android:layout_marginTop="-40dp"
        android:layout_marginStart="-8dp"
        android:layout_marginEnd="-8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/login_header"/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/circle_color_accent_gradient_90deg"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-120dp"
        android:layout_marginBottom="-80dp"/>

    <ImageView
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:src="@drawable/circle_color_accent_gradient_90deg_transparent"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-120dp"/>

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/circle_color_accent_gradient_90deg_transparent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-80dp"
        android:layout_marginBottom="64dp"/>

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/circle_color_accent_gradient_90deg_transparent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="-64dp"
        android:layout_marginTop="120dp"/>

    <LinearLayout
        android:layout_marginTop="112dp"
        android:layout_marginStart="64dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:src="@drawable/logo_about"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/lightTextNormal"
            android:textSize="12sp"
            android:text="@string/version"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textColor="@color/lightTextSelected"
            android:textSize="14sp"
            android:text="@string/versionNumber"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/lightTextNormal"
            android:textSize="12sp"
            android:text="@string/lastUpdate"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textColor="@color/lightTextSelected"
            android:textSize="14sp"
            android:text="@string/lastUpdateDate"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/lightTextNormal"
            android:textSize="12sp"
            android:text="@string/developer"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textColor="@color/lightTextSelected"
            android:textSize="14sp"
            android:text="@string/developerFullName"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/lightTextNormal"
            android:textSize="12sp"
            android:text="@string/tagLine"/>

        <TextView
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textColor="@color/lightTextNormal"
            android:textSize="12sp"
            android:text="@string/appAboutDescription"/>

    </LinearLayout>

</RelativeLayout>