<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".PackageForms.Register">

    <ImageView
        android:layout_marginTop="-8dp"
        android:layout_marginStart="-8dp"
        android:layout_marginEnd="-8dp"
        android:scaleType="fitXY"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/login_header"/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/circle_color_accent_gradient_90deg"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-80dp"
        android:layout_marginBottom="-48dp"/>

    <ImageView
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:src="@drawable/circle_color_accent_gradient_90deg_transparent"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="-64dp"/>

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/circle_color_accent_gradient_90deg_transparent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-60dp"
        android:layout_marginBottom="64dp"/>

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/circle_color_accent_gradient_90deg_transparent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="-56dp"
        android:layout_marginTop="120dp"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/registerCircleImageViewUserPicture"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="16dp"
                android:scaleType="centerCrop"
                android:src="@drawable/user_picture_male_default" />

            <EditText
                android:id="@+id/registerEditTextFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/edit_text"
                android:ems="10"
                android:hint="@string/firstName"
                android:inputType="textVisiblePassword"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:paddingRight="16dp"
                android:paddingBottom="8dp"
                android:textColor="@color/lightTextSelected"
                android:textColorHint="@color/lightTextClickable"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/registerEditTextLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/edit_text"
                android:ems="10"
                android:hint="@string/lastName"
                android:inputType="textVisiblePassword"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:paddingRight="16dp"
                android:paddingBottom="8dp"
                android:textColor="@color/lightTextSelected"
                android:textColorHint="@color/lightTextClickable"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/registerEditTextUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/edit_text"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:paddingRight="16dp"
                android:paddingBottom="8dp"
                android:textColor="@color/lightTextSelected"
                android:textColorHint="@color/lightTextClickable"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/registerRadioGroupGender"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal"
                android:paddingLeft="16dp">

                <TextView
                    android:id="@+id/registerTextViewGender"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingRight="16dp"
                    android:text="@string/gender"
                    android:textColor="@color/lightTextNormal"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/registerRadioButtonMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@drawable/radio_button_button_tint"
                    android:checked="true"
                    android:paddingRight="8dp"
                    android:text="@string/male"
                    android:textColor="@drawable/radio_button_text_color"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/registerRadioButtonFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@drawable/radio_button_button_tint"
                    android:text="@string/female"
                    android:textColor="@drawable/radio_button_text_color"
                    android:textSize="16sp" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/registerTextViewBirthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="16dp"
                    android:paddingLeft="16dp"
                    android:text="@string/birthday"
                    android:textColor="@color/lightTextNormal"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/registerTextViewDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="16dp"
                    android:text="@string/dateDefault"
                    android:textColor="@color/lightTextSelected"
                    android:textSize="16sp" />

                <ImageButton
                    android:id="@+id/registerImageButtonDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorAccent"
                    app:srcCompat="@drawable/ic_date_range_black_24dp" />
            </LinearLayout>

            <EditText
                android:id="@+id/registerEditTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/edit_text"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:paddingRight="16dp"
                android:paddingBottom="8dp"
                android:textColor="@color/lightTextSelected"
                android:textColorHint="@color/lightTextClickable"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/registerEditTextConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/edit_text"
                android:ems="10"
                android:hint="@string/confirmPassword"
                android:inputType="textPassword"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:paddingRight="16dp"
                android:paddingBottom="8dp"
                android:textColor="@color/lightTextSelected"
                android:textColorHint="@color/lightTextClickable"
                android:textSize="16sp" />

            <ProgressBar
                android:id="@+id/registerProgressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/registerTextViewError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/errorMessage"
                android:textColor="@color/lightTextSelected"
                android:textSize="16sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/button_color_accent_rounded"
                android:padding="8dp"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/lightTextSelected"
                android:textSize="16sp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <ImageView
        android:id="@+id/registerTextViewLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/ic_arrow_back_white_24dp"/>

</RelativeLayout>