<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkThemeSurface"
    tools:context=".PackageForms.EditProfile">

    <include
        android:id="@+id/toolbar"
        layout="@layout/tool_toolbar"/>

    <ProgressBar
        android:id="@+id/editProfileProgressBar"
        android:layout_below="@id/toolbar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:indeterminate="true"
        android:visibility="gone" />

    <androidx.core.widget.NestedScrollView
        android:layout_below="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:padding="16dp">

            <TextView
                android:layout_marginBottom="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/displayPicture"
                android:textSize="20dp"
                android:textColor="@color/darkTextSelected"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/editProfileCircleImageViewUserPicture"
                android:layout_marginBottom="16dp"
                android:layout_gravity="center"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/placeholder"/>

            <View
                android:layout_marginBottom="16dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/darkTextDisabled" />

            <TextView
                android:layout_marginBottom="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coverPhoto"
                android:textSize="20dp"
                android:textColor="@color/darkTextSelected"/>

            <androidx.cardview.widget.CardView
                android:layout_marginBottom="16dp"
                android:elevation="0dp"
                app:cardCornerRadius="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/editProfileImageViewUserCover"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/placeholder" />

            </androidx.cardview.widget.CardView>

            <View
                android:layout_marginBottom="16dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/darkTextDisabled" />

            <TextView
                android:layout_marginBottom="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bio"
                android:textSize="20dp"
                android:textColor="@color/darkTextSelected"/>

            <EditText
                android:id="@+id/editProfileEditTextUserBio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/enterBio"
                android:inputType="textMultiLine"
                android:textColor="@color/darkTextSelected"
                android:textColorHint="@color/darkTextClickable"
                android:textSize="16sp"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>